--- a/package.json
+++ b/package.json
@@ -7,16 +7,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.314.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vitawind": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
